--- a/papers.bib
+++ b/papers.bib
@@ -11,30 +11,136 @@
   address   = "{M"unchen}",
 }
 
-@article{Besl:1992,
-  author    = "P. Besl and N. McKay",
-  title     = "{A Method for Registration of 3-D Shapes}",
-  journal   = "IEEE Transactions on Pattern Analysis and Machine Intelligence",
-  month     = Feb,
-  year      = "1992",
-  volume    = "14",
-  number    = "2",
-  pages     = "239--256"
-}
-
-@inproceedings{Thrun:2000,
-  author    = "S. Thrun and D. Fox and W. Burgard",
-  title     = "{A Real-Time Algorithm for Mobile Robot Mapping With
-                  Applications to Multi-Robot and {3D} Mapping}",
-  booktitle = "Proceedings of the IEEE International Conference on Robotics and Automation",
-  month     = "April",
-  year      = "2000",
-  pages     = "321--328",
+@article{digital-turn:2020,
+  author    = "W. Weisflog, A. Böckel",
+  title     = "{Ein studentischer Blick auf den Digitalen Turn - Auswertung einer bundesweiten Befragung von Studierenden f"ur Studierende}",
+  journal   = "Hochschulforum Digitalisierung",
+  year      = "2020",
+  volume    = "54",
 }
 
 @misc{your-study,
   author    = "{S. A"smann}",
   title     = "{You(r) Study - Eigensinnig Studieren im 'digitalen Zeitalter'}",
-  note = {\url{https://your-study.info/}},
+  note      = {\url{https://your-study.info/}},
 }
 
+@misc{studip.de,
+  author    = "{Stud.IP}",
+  title     = "{Stud.IP-Portal: Organisieren, Verwalten Lernen, Lehren}",
+  note      = {\url{https://studip.de/}},
+}
+
+@misc{studip:plugins,
+  author    = "{Stud.IP}",
+  title     = "{Entwicklerdokumentation: Die Stud.IP-Plugin-Schnittstelle}",
+  note      = {\url{https://hilfe.studip.de/develop/Entwickler/PluginSchnittstelle}},
+}
+
+@misc{studip:jsonapi,
+  author    = "{Stud.IP}",
+  title     = "{Entwicklerdokumentation: JSONAPI}",
+  note      = {\url{https://hilfe.studip.de/develop/Entwickler/JSONAPI}},
+}
+
+@misc{studip:blubber,
+  author    = "{Stud.IP}",
+  title     = "{Nutzerdokumentation: Blubber}",
+  note      = {\url{https://hilfe.studip.de/help/4.1/de/Basis/InteraktionBlubber}},
+}
+
+@misc{studip:meeting,
+  author    = "{Github}",
+  title     = "{Stud.IP Plugin: BigBlueButton und AdobeConnect Meetings}",
+  note      = {\url{https://github.com/virtUOS/studip-meeting}},
+}
+
+@misc{studip:meetings,
+  author    = "{Stud.IP}",
+  title     = "{Nutzerdokumentation: Meetings}",
+  note      = {\url{https://hilfe.studip.de/help/4.4/de/Basis/Meetings}},
+}
+
+@misc{studip:notifications,
+  author    = "{Stud.IP}",
+  title     = "{Entwicklerdokumentation: Notifications}",
+  note      = {\url{https://hilfe.studip.de/develop/Entwickler/Notifications}},
+}
+
+@misc{studip:etherpad,
+  author    = "{Github}",
+  title     = "{Stud.IP Plugin: Etherpad}",
+  note      = {\url{https://github.com/luniki/studip-plugin-studipad}},
+}
+
+@misc{studip:moodle,
+  author    = "{Github}",
+  title     = "{Stud.IP Plugin: Moodle Konnektor f"ur Stud.IP}",
+  note      = {\url{https://github.com/elan-ev/studip-moodle-connect}},
+}
+
+@misc{studip:blackboard,
+  author    = "{GitLab}",
+  title     = "{Stud.IP Plugin: Schwarzes Brett}",
+  note      = {\url{https://gitlab.studip.de/uol/plugins/SchwarzesBrettPlugin}},
+}
+
+@misc{studip:moodle-gui,
+  author    = "{TU Clausthal}",
+  title     = "{TU Clausthal: Moodle (RZ-Dokumentationen)}",
+  note      = {\url{https://doku.tu-clausthal.de/doku.php?id=multimedia:moodle:start}},
+}
+
+@misc{matrix:faq,
+  author    = "{Matrix}",
+  title     = "{Frequently Asked Questions}",
+  note      = {\url{https://matrix.org/faq/}},
+}
+
+@misc{matrix:api,
+  author    = "{Matrix}",
+  title     = "{Client Server API}",
+  note      = {\url{https://matrix.org/docs/guides/client-server-api}},
+}
+
+@misc{matrix:bridges,
+  author    = "{Matrix}",
+  title     = "{Bridges}",
+  note      = {\url{https://matrix.org/bridges/}},
+}
+
+@misc{matrix:element,
+  author    = "{Github}",
+  title     = "{Element - A glossy Matrix collaboration client for the web}",
+  note      = {\url{https://github.com/vector-im/element-web/}},
+}
+
+@misc{matrix:ldap,
+  author    = "{Github}",
+  title     = "{An LDAP3 auth provider for Synapse}",
+  note      = {\url{https://github.com/matrix-org/matrix-synapse-ldap3}},
+}
+
+@misc{bigbluebutton,
+  author    = "{BigBlueButton}",
+  title     = "{Open Source Virtual Classroom Software}",
+  note      = {\url{https://bigbluebutton.org/}},
+}
+
+@misc{bigbluebutton:api,
+  author    = "{BigBlueButton}",
+  title     = "{API Dokumentation: create}",
+  note      = {\url{https://docs.bigbluebutton.org/dev/api.html#create}},
+}
+
+@misc{etherpad,
+  author    = "{Github}",
+  title     = "{Etherpad: A modern really-real-time collaborative document editor}",
+  note      = {\url{https://github.com/ether/etherpad-lite}},
+}
+
+@misc{json:api,
+  author    = "{JSON:API}",
+  title     = "{Latest Specification (v1.0)}",
+  note      = {\url{https://jsonapi.org/format/}},
+}
